logic and consistency fixes for v1